--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,7 +13,20 @@ a {
 
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
+li{
+  list-style: none;
+}
+
+input{
+  outline: unset;
+  border: none;
+}
+
+
+/* Button */
 
 @media (prefers-color-scheme: dark) {
   html {
