--- a/scss/player/PlayListContent.module.scss
+++ b/scss/player/PlayListContent.module.scss
@@ -8,6 +8,10 @@
     height: 100%;
     // overflow-y: scroll;
 
+    @include mobile{
+        padding: 0px 5px;
+    }
+
     .songsList{
         width:100%;
 
@@ -99,6 +103,9 @@
 .scroll::-webkit-scrollbar {
     width: 8px;
     height: 15px;
+    @include mobile{
+        width: 3px;
+    }
 }
 .scroll::-webkit-scrollbar-track {
     border-radius: 10px;
