--- a/scss/common/Header.module.scss
+++ b/scss/common/Header.module.scss
@@ -1,4 +1,5 @@
 @import '../variable';
+@import '../utils.scss';
 
 .wrapper{
     width: 100%;
@@ -14,8 +15,13 @@
     align-items: center;
     justify-content: space-between;
 
+    @include mobile{
+        padding: 10px 5px;
+    }
+
     .search{
-        width: 350px;
+        margin-right: 10px;
+        width: 550px;
         padding: 0 10px;
 
         display: flex;
@@ -26,6 +32,7 @@
         border-radius: 25px;
         
         cursor: pointer;
+
 
 
         & > input{
@@ -54,14 +61,20 @@
 
         margin-left: auto;
 
+
+
         & > svg{
-            margin-right: 10px;
+            margin-right: 25px;
             cursor: pointer;
             transition: --smooth;
 
             &:hover{
                 color: $text-secondary;
                 transition: --smooth;
+            }
+            @include mobile{
+                margin-right: 15px;
+                display: none;
             }
         }
     }
