--- a/scss/player/PlayListHeader.module.scss
+++ b/scss/player/PlayListHeader.module.scss
@@ -3,7 +3,7 @@
 
 .playlistHeader{
     width: 100%;
-    padding: 20px 50px;
+    padding: 20px 20px;
     text-align: center;
     // height: 100%;
     & .name{
@@ -88,7 +88,6 @@
             padding: 10px 10px 10px 15px;
 
         }
-
         
     }
 
@@ -105,6 +104,26 @@
     transition: $smooth;
     animation: spin  20s linear infinite;
     transform: scale(1.5);
+}
+.showPlaying{
+    display: flex!important;
+    transition: $smooth;
+    background-color: $hover-background;
+}
+.playingIcon {
+    border: none!important;
+
+    & img{
+        animation: none;
+        border-radius: 0;
+        border-bottom-left-radius: 50%;
+        border-bottom-right-radius: 50%;
+        transform: scale(1);
+    }
+    &:hover{
+        width: 60!important;
+        height: 60px!important;
+    }
 }
 
 .playBtn{
