--- a/scss/player/SongInformation.module.scss
+++ b/scss/player/SongInformation.module.scss
@@ -2,12 +2,12 @@
 @import '../utils.scss';
 
 .songInformation{
-    width: 20%;
+    width: 25%;
 
     display: flex;
     align-items: center;
     
-    padding-left: 10px;
+    padding-left: 20px;
 
     @include mobile{
         display: none;
@@ -23,14 +23,16 @@
     }
 
     .info{
-        margin-left: 10px;
+        margin-left: 15px;
 
 
         .name{
+            font-size: 16px;
             font-weight: 500;
+            line-height: 1.8em;
         }
         .singer{
-            font-size: 14px;
+            font-size: 13px;
             color: $text-secondary;
 
         }
