--- a/scss/player/MainControl.module.scss
+++ b/scss/player/MainControl.module.scss
@@ -58,6 +58,8 @@
             height: 30px;
             margin: 0 20px;
 
+            position: relative;
+
             display: flex;
             justify-content: center;
             align-items: center;
@@ -73,6 +75,21 @@
                 background-color: $text-secondary;
                 transition: $smooth;
 
+            }
+
+            & > span{
+                color: $primary-color;
+                position: absolute;
+                top: 30%;
+                left: 45%;
+
+                font-size: 9px;
+
+                font-weight: 800;
+            }
+
+            & > .allMode, .onlyMode{
+                color: $primary-color;
             }
 
         }
