--- a/scss/player/UtilityControl.module.scss
+++ b/scss/player/UtilityControl.module.scss
@@ -9,7 +9,11 @@
     align-items: center;
 
     @include mobile{
-        display: none;
+        position: absolute;
+        right: 15px;
+        // top: 30%;
+        width: 30px;
+        height: 70px;
     }
 
 
@@ -21,7 +25,87 @@
         margin: 0 15px;
         display: flex;
         align-items: center;
-        
+
+        @include mobile{
+            display: none!important;
+        }
+    }
+    .verticalVolumeControl{
+        display: none!important;
+        width: 100%;
+        // margin: 0 20px;
+        display: flex;
+        align-items: center;
+
+        position: relative;
+
+        padding-top: 15px;
+
+        transform: translateY(calc(-15px / 2));
+
+        @include mobile{
+            display: block!important;
+        }
+
+        .verticalSliderVolume{
+            position: absolute;
+            bottom: calc(100% - 10px);
+            left: 50%;
+            transform: translateX(-50%);
+            
+            padding: 2px 15px;
+            display: none;
+            
+            
+
+
+            .verticalSliderVolumeBase{
+                
+                background-color: $text-secondary;
+                width: 3px;
+                height: 150px;
+                display: flex;
+                flex-direction: column;
+                justify-content: flex-end;
+                border-radius: 10px;
+
+
+                & > .volume{
+                    height: 20%;
+                    width: 100%!important;
+                    position: relative;
+
+                    border-radius: 10px;
+                    // margin-top: 50%;
+
+                    // transform: translateY(calc(100% - 20%)  );
+
+                    background-color: $text-primary;
+
+                    & > span{
+                        position: absolute;
+                        width: 6px;
+                        height: 6px;
+                        background-color: $text-primary;
+                        left: 50%;
+                        top: 0;
+                        transform: translateX(-60%);
+
+                        border-radius: 50%;
+                    }
+
+                }
+            }
+
+            
+            // &:hover {
+            //     color: $text-secondary!important;
+            // }
+        }
+        &:hover  .verticalSliderVolume{
+            display: block!important;
+        }
+
 
     }
 
@@ -51,7 +135,7 @@
         height: 4px;
         border-radius: 15px;
 
-        .volume{   
+        & > .volume{   
             width: 50%;
             height: 100%;
             background-color: $text-primary;
