--- a/scss/player/Song.module.scss
+++ b/scss/player/Song.module.scss
@@ -11,7 +11,11 @@
     
    
     border-bottom: 1px $text-secondary solid;
-    padding: 15px 0;
+    padding: 10px 0;
+
+    @include mobile{
+        padding: 8px 0;
+    }
 
 
     @include mobile{
@@ -87,7 +91,7 @@
 
         display: flex;
         justify-content: space-between;
-        align-content: center;
+        align-items: center;
 
         color:$text-secondary;
 
