--- a/scss/player/PlayListContent.module.scss
+++ b/scss/player/PlayListContent.module.scss
@@ -20,10 +20,11 @@
         flex-direction: column;
         
 
-        & .listHead, .song{
+        & .listHead{
             display: flex;
             justify-content: space-between;
             align-items: center;
+            font-weight: 700;
             .name{
                 width: 50%;
                 padding-left: 10px;
@@ -50,56 +51,6 @@
 
         }
 
-        .song{
-            cursor: pointer;
-            transition: $smooth;
-
-            & .name{
-                display: flex;
-                align-items: center;
-
-                & span{
-                   display: inline-block;
-                   padding-left: 10px;
-                }
-
-                & img{
-                    border-radius: 10px;
-                }
-                
-                &:hover{
-                    color: $text-secondary;
-                }
-            }
-
-            & .singer{
-                display: flex;
-                justify-content: space-between;
-                align-content: center;
-
-                color:$text-secondary;
-
-                & svg{
-                    display: none;
-                    transition: $smooth;
-
-                    &:hover{
-                        transition: $smooth;
-                        color: $text-secondary;
-                    }
-                }
-            }
-            
-            &:hover .singer svg{
-                display: block;
-                transition: $smooth;
-            }
-
-            &:hover{
-                background-color: $primary-color;
-                transition: $smooth;
-            }
-        }
     }
 }
 
