--- a/scss/player/MainControl.module.scss
+++ b/scss/player/MainControl.module.scss
@@ -88,7 +88,7 @@
                 font-weight: 800;
             }
 
-            & > .allMode, .onlyMode{
+            & > .allMode, .onlyMode, .activeRandom{
                 color: $primary-color;
             }
 
