add favourite feature

--- a/scss/common/Header.module.scss
+++ b/scss/common/Header.module.scss
@@ -21,7 +21,7 @@
 
     .search{
         margin-right: 10px;
-        width: 550px;
+        width: 50%;
         padding: 0 10px;
 
         display: flex;
