--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
   padding: 0;
@@ -18,11 +22,12 @@ a {
   margin: 0;
   padding: 0;
 }
-li{
+
+li {
   list-style: none;
 }
 
-input{
+input {
   outline: unset;
   border: none;
 }
@@ -34,6 +39,7 @@ input{
   html {
     color-scheme: dark;
   }
+
   body {
     color: white;
     background: black;
